# posify

./: Cargo.toml  README.md
examples/: asb.rs  code_c_barcode.rs  fromlp0.rs  get_firmware.rs  image.rs  list_usb_ids.rs  match_manufacturer.rs  simple.rs
src/: barcode.rs  consts.rs  img.rs  lib.rs  printer.rs
tests/: simple.rs
