[package]
name = "posify"
version = "0.6.8"
description = """
An thermal printer driver for Rust
"""
readme = "README.md"
keywords = ["ESC", "POS", "p3", "snbc", "printer"]
repository = "https://github.com/flynnguy/posify"
license = "MIT"
authors = ["Qian Linfeng <thewawar@gmail.com>", "Christopher Flynn <flynnguy@gmail.com>"]
edition = "2021"

[features]
qrcode_builder = ["qrcode"]

[dependencies]
encoding = "0.2"
byteorder = "1.4"
image = "0.24"
rusb = "0.9"
thiserror = "1.0.40"
qrcode =  { version = "0.12", optional = true }
log = "0.4"

[dev-dependencies]
tempfile = "2.2"
env_logger = "0.9"
